test: 변경 로직에 맞춰서 테스트 수정